# cocina

./: .gitignore  README.md  dot_cocina  dot_pkit  package_names.txt  pyproject.toml
cocina/: cli.py  config_handler.py  constants.py  printer.py  utils.py
project_kit/: cli.py  config_handler.py  constants.py  printer.py  utils.py
