[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project_kit"
version = "0.0.1"
readme = "README.md"
dependencies = []

[tool.setuptools]
packages = [
	"project_kit",
	# "project_kit.utils"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
project_kit = { path = ".", editable = true }
